rust-examples/tests/compile-fail/Rule_18_7.rs
#![deny(clippy)]
#[deny(warnings)]

fn main() {
    let a: [u32];
}
